# SME-du-bao-nhu-cau-ton-kho

./: .gitignore  HUONG_DAN_DAU_RA_MO_HINH.md  README.md  pyproject.toml
src/retail_forecast/: __init__.py  cli.py  datasets.py  desktop_app.py  evaluation.py  exporters.py  features.py  inventory.py  models.py  pipeline.py  streamlit_app.py  synthetic.py  webapp.py
tests/: test_pipeline.py  test_webapp.py
web/: app.js  index.html  styles.css
