[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-forecast-project"
version = "0.1.0"
description = "Retail demand forecasting and inventory optimization toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
prophet = ["prophet>=1.1"]
lstm = ["tensorflow>=2.13"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
ui = ["streamlit>=1.37", "plotly>=5.22"]
dev = ["pytest>=8.0"]

[project.scripts]
retail-forecast = "retail_forecast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
